Add false positive to validation config

--- a/.doc_gen/validation.yaml
+++ b/.doc_gen/validation.yaml
@@ -45,6 +45,7 @@ allow_list:
   - "ListTagsExample/ListTagsExample/ListTags"
   - "ListTagsForVaultExample/ListTagsForVault"
   - "ListVoiceConnectorTerminationCredentials"
+  - "Models/AmazonTitanText/Converse/Converse"
   - "ModifyReplicationGroupShardConfiguration"
   - "ModifyTrafficMirrorFilterNetworkServices"
   - "PutBucketIntelligentTieringConfiguration"
