--- a/javav2/example_code/cloudfront/pom.xml
+++ b/javav2/example_code/cloudfront/pom.xml
@@ -35,7 +35,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.21.20</version>
+                <version>2.25.56</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -49,6 +49,14 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sso</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ssooidc</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
