--- a/javav2/example_code/identitystore/src/main/resources/config.properties
+++ b/javav2/example_code/identitystore/src/main/resources/config.properties
@@ -1,6 +1,6 @@
-identitystoreId = <Enter Value>
-groupName = <Enter Value>
-groupDesc = <Enter Value>
-userName = <Enter Value>
-givenName = <Enter Value>
-familyName = <Enter Value>
+identitystoreId = d-abcd1234
+groupName = Administrators
+groupDesc = Group for administrative users
+userName = johndoe
+givenName = John
+familyName = Doe
