--- a/dotnetv3/Bedrock-runtime/Tests/BedrockRuntimeTests.csproj
+++ b/dotnetv3/Bedrock-runtime/Tests/BedrockRuntimeTests.csproj
@@ -11,6 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.1" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.304.10" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
