--- a/.doc_gen/metadata/firehose_metadata.yaml
+++ b/.doc_gen/metadata/firehose_metadata.yaml
@@ -1,18 +1,18 @@
 # zexi 0.4.0
-kinesis-firehose_PutRecord:
+firehose_PutRecord:
   languages:
     Python:
       versions:
         - sdk_version: 3
-          github: python/example_code/kinesis-firehose
+          github: python/example_code/firehose
           excerpts:
             - description:
               snippet_tags:
-                - python.example_code.kinesis-firehose.init
-                - python.example_code.kinesis-firehose.put_record
+                - python.example_code.firehose.init
+                - python.example_code.firehose.put_record
   services:
-    kinesis-firehose: {PutRecord}
-kinesis-firehose_PutRecordBatch:
+    firehose: {PutRecord}
+firehose_PutRecordBatch:
   languages:
     Rust:
       versions:
@@ -26,15 +26,15 @@ kinesis-firehose_PutRecordBatch:
     Python:
       versions:
         - sdk_version: 3
-          github: python/example_code/kinesis-firehose
+          github: python/example_code/firehose
           excerpts:
             - description:
               snippet_tags:
-                - python.example_code.kinesis-firehose.init
-                - python.example_code.kinesis-firehose.put_record_batch
+                - python.example_code.firehose.init
+                - python.example_code.firehose.put_record_batch
   services:
-    kinesis-firehose: {PutRecordBatch}
-kinesis-firehose_Scenario_PutRecords:
+    firehose: {PutRecordBatch}
+firehose_Scenario_PutRecords:
   title: Use &FHlong; to process individual and batch records
   title_abbrev: Put records to &FH;
   synopsis: use &FH; to process individual and batch records.
@@ -43,13 +43,13 @@ kinesis-firehose_Scenario_PutRecords:
     Python:
       versions:
         - sdk_version: 3
-          github: python/example_code/kinesis-firehose/scenarios/firehose-put-actions
+          github: python/example_code/firehose/scenarios/firehose-put-actions
           excerpts:
             - description: This script puts individual and batch records to &FH;.
               snippet_files:
-                - python/example_code/kinesis-firehose/scenarios/firehose-put-actions/firehose.py
+                - python/example_code/firehose/scenarios/firehose-put-actions/firehose.py
             - description: This file contains config for the above script.
               snippet_files:
-                - python/example_code/kinesis-firehose/scenarios/firehose-put-actions/config.py
+                - python/example_code/firehose/scenarios/firehose-put-actions/config.py
   services:
-    kinesis-firehose: {PutRecord, PutRecordBatch}
+    firehose: {PutRecord, PutRecordBatch}
