--- a/javav2/example_code/mq/pom.xml
+++ b/javav2/example_code/mq/pom.xml
@@ -13,7 +13,7 @@
         <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
         <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
-        <aws.java.sdk.version>2.21.20</aws.java.sdk.version>
+        <aws.java.sdk.version>2.25.56</aws.java.sdk.version>
         <junit5.version>5.4.2</junit5.version>
     </properties>
     <dependencyManagement>
@@ -29,6 +29,14 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sso</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ssooidc</artifactId>
+        </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>mq</artifactId>
