--- a/javascriptv3/example_code/bedrock-agent/package.json
+++ b/javascriptv3/example_code/bedrock-agent/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest run **/*.unit.test.js",
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-agent": "^3.515.0"
