--- a/javascriptv3/example_code/cloudwatch-events/package.json
+++ b/javascriptv3/example_code/cloudwatch-events/package.json
@@ -11,7 +11,7 @@
   },
   "type": "module",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "devDependencies": {
     "vitest": "^1.6.0"
