--- a/javascriptv3/example_code/cloudwatch-logs/package.json
+++ b/javascriptv3/example_code/cloudwatch-logs/package.json
@@ -11,7 +11,7 @@
     "@aws-sdk/client-lambda": "^3.216.0"
   },
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js",
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml",
     "test": "vitest run **/*.unit.test.js"
   },
   "devDependencies": {
