--- a/javascriptv3/example_code/cloudwatch/package.json
+++ b/javascriptv3/example_code/cloudwatch/package.json
@@ -10,7 +10,7 @@
     "@aws-sdk/client-ec2": "^3.213.0"
   },
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "devDependencies": {
     "uuid": "^9.0.0",
