--- a/javascriptv3/example_code/codebuild/package.json
+++ b/javascriptv3/example_code/codebuild/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "devDependencies": {
     "@aws-sdk/client-iam": "^3.391.0",
