--- a/javascriptv3/example_code/elastic-load-balancing-v2/package.json
+++ b/javascriptv3/example_code/elastic-load-balancing-v2/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "author": "Corey Pyle <corepyle@amazon.com>",
   "license": "Apache-2.0",
