--- a/javascriptv3/example_code/eventbridge/package.json
+++ b/javascriptv3/example_code/eventbridge/package.json
@@ -4,7 +4,7 @@
   "author": "Corey Pyle <corepyle@amazon.com>",
   "type": "module",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
