--- a/javascriptv3/example_code/glue/package.json
+++ b/javascriptv3/example_code/glue/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "test": "vitest run **/*.unit.test.js",
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
