--- a/javascriptv3/example_code/lambda/package.json
+++ b/javascriptv3/example_code/lambda/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest run **/*.unit.test.js",
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
