--- a/javascriptv3/example_code/medical-imaging/package.json
+++ b/javascriptv3/example_code/medical-imaging/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "vitest run **/*.unit.test.js",
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "type": "module",
   "devDependencies": {
