--- a/javascriptv3/example_code/nodegetstarted/package.json
+++ b/javascriptv3/example_code/nodegetstarted/package.json
@@ -4,7 +4,7 @@
   "description": "This guide shows you how to initialize an NPM package, add a service client to your package, and use the JavaScript SDK to call a service action.",
   "main": "index.js",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "author": "Corey Pyle <corepyle@amazon.com>",
   "license": "Apache-2.0",
