--- a/javascriptv3/example_code/sqs/package.json
+++ b/javascriptv3/example_code/sqs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "Apache-2.0",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js --reporter=junit --outputFile=test_results/$npm_package_name.junit.xml"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
