--- a/.github/workflows/lambda-layer.yml
+++ b/.github/workflows/lambda-layer.yml
@@ -47,9 +47,11 @@ jobs:
           release_id: ${{ format('aws-doc-sdk-examples-{0}-dev.zip', github.head_ref )}}
           release_layer: ${{ format('aws-doc-sdk-examples-{0}-dev', github.head_ref )}}
         run: |
-          mkdir zip/python
+          mkdir zip
+          cd zip
+          mkdir python
           # zip it up
-          zip --quiet -r $release_id zip/python
+          zip --quiet -r $release_id python
           
           # copy the file to S3 and install it in lambda layers
           aws s3 cp $release_id $release_bucket_uri
