--- a/.github/workflows/zip-and-push.yml
+++ b/.github/workflows/zip-and-push.yml
@@ -4,11 +4,34 @@ on:
 
 jobs:
   zip-n-push:
+
     name: Zip and Push
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # For more info: https://github.com/aws-actions/configure-aws-credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
       - name: Zip Folder
         run: |
           cd ../ # I added this
           rm -rf aws-doc-sdk-examples.zip
           zip -r aws-doc-sdk-examples.zip aws-doc-sdk-examples -x ".git/*" ".github/*"
+
+      - name: Upload to S3
+        env:
+          release_bucket: 'github-repo-numbers'
+          release_bucket_uri: 's3://github-repo-numbers'
+          release_id: ${{ format('aws-doc-sdk-examples-{0}-dev.zip', github.head_ref )}}
+          release_layer: ${{ format('aws-doc-sdk-examples-{0}-dev', github.head_ref )}}
+        run: |      
+          # copy the file to S3 and install it in lambda layers
+          aws s3 cp $release_id $release_bucket_uri
+          aws lambda publish-layer-version --layer-name $release_layer  --content S3Bucket=$release_bucket,S3Key=$release_id --compatible-runtimes python3.8
+          
