--- a/javav2/example_code/cloudformation/pom.xml
+++ b/javav2/example_code/cloudformation/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>CloudFormationV2</groupId>
-    <artifactId>CloudFormationV2</artifactId>
+    <groupId>CloudFormation</groupId>
+    <artifactId>CloudFormation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.21.33</version>
+                <version>2.25.56</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
