Replace csx with cs files and simplify tests

--- a/dotnetv3/Bedrock-runtime/Models/Mistral/InvokeModel/InvokeModel.csproj
+++ b/dotnetv3/Bedrock-runtime/Models/Mistral/InvokeModel/InvokeModel.csproj
@@ -2,14 +2,11 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net8.0</TargetFramework>
+		<AssemblyName>Mistral.$(MSBuildProjectName)</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="InvokeModel.csx" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.1" />
-		<PackageReference Include="AWSSDK.Core" Version="3.7.304.10" />
+		<PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.3" />
+		<PackageReference Include="AWSSDK.Core" Version="3.7.304.12" />
 	</ItemGroup>
 </Project>
