--- a/dotnetv3/Bedrock-runtime/Models/AmazonTitanText/ConverseStream/ConverseStream.csproj
+++ b/dotnetv3/Bedrock-runtime/Models/AmazonTitanText/ConverseStream/ConverseStream.csproj
@@ -1,15 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <Compile Include="ConverseStream.csx" />
-    </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<AssemblyName>AmazonTitanText.$(MSBuildProjectName)</AssemblyName>
+	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.1" />
-		<PackageReference Include="AWSSDK.Core" Version="3.7.304.10" />
+		<PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.3" />
+		<PackageReference Include="AWSSDK.Core" Version="3.7.304.12" />
 	</ItemGroup>
 </Project>
