--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -16,8 +16,33 @@ ecr_Hello:
                 - ecr.java2_hello.main
   services:
     ecr: {listImagesPaginator}
+ecr_CreateRepository:
+  title: Create an &ECR; repository 
+  title_abbrev: Create a repository
+  synopsis: create an &ECR; repository.
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2.create.repo.main
+  services:
+    ecr: {CreateRepository}
 ecr_DescribeRepositories:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2_hello.main
     Rust:
       versions:
         - sdk_version: 1
