--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -16,6 +16,70 @@ ecr_Hello:
                 - ecr.java2_hello.main
   services:
     ecr: {listImagesPaginator}
+ecr_GetAuthorizationToken:
+  title: Retrieves the authorization token for an &ECR; repository 
+  title_abbrev: Retrieves the authorization token
+  synopsis: retrieves the authorization token for an &ECR; repository. 
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2.get.token.main
+  services:
+    ecr: {GetAuthorizationToken}
+ecr_DescribeRepositories:
+  title: Describe an &ECR; repository 
+  title_abbrev: Describe a repository
+  synopsis: describe an &ECR; repository.
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2.describe.policy
+  services:
+    ecr: {DescribeRepositories}
+ecr_StartLifecyclePolicyPreview:
+  title: Describe an &ECR; image 
+  title_abbrev: Describe an image
+  synopsis: describe an &ECR; image.
+  languages:
+    Java:
+     versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2.verify.image.main
+  services:
+    ecr: {DescriStartLifecyclePolicyPreview}    
+ecr_DescribeImages:
+  title: Describe an &ECR; image 
+  title_abbrev: Describe an image
+  synopsis: describe an &ECR; image.
+  languages:
+    Java:
+     versions:
+        - sdk_version: 2
+          github: javav2/example_code/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.java2.verify.image.main
+  services:
+    ecr: {DescribeImages}
 ecr_DeleteRepository:
   title: Delete an &ECR; repository 
   title_abbrev: Delete a repository
