--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -167,7 +167,10 @@ ecr_Scenario_RepositoryManagement:
           github: javav2/example_code/kms
           sdkguide:
           excerpts:
-            - description:
+            - description: Run an interactive scenario demonstrating &ECR; features.
+              snippet_tags:
+                - ecr.java2_scenario.parent.main
+            - description: A wrapper class for &ECR; SDK methods.
               snippet_tags:
                 - ecr.java2_scenario.main
   services:
